Redirect non-www to www

--- a/webapp/root_files/web.config
+++ b/webapp/root_files/web.config
@@ -14,6 +14,20 @@
         </staticContent>
         <rewrite>
             <rules>
+                <rule name="Redirect non-www to www" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTP_HOST}" pattern="^didyouhearaboutthisjob\.com$" />
+                    </conditions>
+                    <action type="Redirect" url="https://www.didyouhearaboutthisjob.com/{R:1}" redirectType="Permanent" />
+                </rule>
+                <rule name="Redirect dyhatj" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTP_HOST}" pattern="^(.*)\.dyhatj\.com$" />
+                    </conditions>
+                    <action type="Redirect" url="https://www.didyouhearaboutthisjob.com/{R:1}" redirectType="Permanent" />
+                </rule>
                 <rule name="Redirect to HTTPS" stopProcessing="true">
                     <match url="(.*)"/>
                     <conditions>
