fix dyhatj redirect

--- a/webapp/root_files/web.config
+++ b/webapp/root_files/web.config
@@ -24,7 +24,7 @@
                 <rule name="Redirect dyhatj" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions>
-                        <add input="{HTTP_HOST}" pattern="^(.*)\.dyhatj\.com$" />
+                        <add input="{HTTP_HOST}" pattern="^(.*\.)?dyhatj\.com$" />
                     </conditions>
                     <action type="Redirect" url="https://www.didyouhearaboutthisjob.com/{R:1}" redirectType="Permanent" />
                 </rule>
