--- a/webapp/root_files/appConfig.json
+++ b/webapp/root_files/appConfig.json
@@ -3,5 +3,8 @@
     "appCompanyPossessive": "Stoic Dreams'",
     "appCompanySingular": "Stoic Dreams",
     "appApi": "https://api.myfi.ws",
-    "rolesApi": "user/roles"
+    "rolesApi": "user/roles",
+    "dynNavRoutes": [
+        "/search"
+    ]
 }
