--- a/webapp/root_files/appConfig.json
+++ b/webapp/root_files/appConfig.json
@@ -1,5 +1,5 @@
 {
-    "appName": "Did You Hear About This Job?",
+    "appName": "Did You Hear About This Job",
     "appCompanyPossessive": "Stoic Dreams'",
     "appCompanySingular": "Stoic Dreams",
     "appApi": "https://api.myfi.ws",
