--- a/webapp/root_files/appConfig.json
+++ b/webapp/root_files/appConfig.json
@@ -5,6 +5,8 @@
     "appApi": "https://api.myfi.ws",
     "rolesApi": "user/roles",
     "dynNavRoutes": [
+        "/content",
+        "/forms",
         "/search"
     ]
 }
